--- a/management/3.html
+++ b/management/3.html
@@ -161,13 +161,11 @@
                           </div>
                         </div>
                         <div class="col-12">
-                          <div
-                            class="d-flex align-items-center justify-content-center"
-                            id="diaSpace"
-                            style="height: 70vh; margin-top: 2.5vh"
-                          >
-                            <div id="myholder"></div>
-                          </div>
+                          <img
+                            src="./assets/img/test6.png"
+                            class="d-block w-100"
+                            alt=""
+                          />
                         </div>
                       </div>
                     </div>
@@ -183,7 +181,7 @@
                     </div>
                     <div class="card-body">
                       <div class="row">
-                        <div class="col-4">
+                        <div class="col-5">
                           <div
                             id="carouselExampleControls"
                             class="carousel slide"
@@ -192,7 +190,7 @@
                             <div class="carousel-inner">
                               <div class="carousel-item active">
                                 <img
-                                  src="./assets/img/tesst7.png"
+                                  src="./assets/img/test8.png"
                                   class="d-block w-100"
                                   alt="..."
                                 />
@@ -277,34 +275,30 @@
                                 >
                                   <thead>
                                     <tr>
-                                      <th style="width: 40%"></th>
-                                      <th style="width: 60%">Tủ điện</th>
+                                      <th></th>
+                                      <th>Dây cáp điện</th>
                                     </tr>
                                   </thead>
                                   <tbody>
                                     <tr>
-                                      <td class="text-bold-500">Ptt</td>
-                                      <td>79kW</td>
+                                      <td class="text-bold-500">Cỡ dây</td>
+                                      <td>2x2.5mm</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">Số lộ</td>
-                                      <td>11</td>
+                                      <td class="text-bold-500">Số lõi</td>
+                                      <td>3</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">Tên tủ</td>
-                                      <td>MĐV.1</td>
+                                      <td class="text-bold-500">Iđm</td>
+                                      <td>200A</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">
-                                        Loại tải chính
-                                      </td>
-                                      <td>Điều hoà</td>
+                                      <td class="text-bold-500">Độ dài</td>
+                                      <td>65m</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">
-                                        Hệ số đồng thời
-                                      </td>
-                                      <td>0.6</td>
+                                      <td class="text-bold-500">Hãng</td>
+                                      <td>CADIVI</td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -365,21 +359,8 @@
                                       <td colspan="3">55&deg;C</td>
                                     </tr>
                                     <tr>
-                                      <td style="font-weight: bold">H</td>
-                                      <td colspan="3">97%</td>
-                                    </tr>
-                                    <tr>
                                       <td style="font-weight: bold">Pre</td>
                                       <td colspan="3">50.1 Hz</td>
-                                    </tr>
-                                    <tr>
-                                      <td style="font-weight: bold">STATUS</td>
-                                      <td
-                                        colspan="3"
-                                        style="background-color: #209935"
-                                      >
-                                        OK
-                                      </td>
                                     </tr>
                                   </tbody>
                                 </table>
