--- a/management/4.html
+++ b/management/4.html
@@ -192,7 +192,7 @@
                             <div class="carousel-inner">
                               <div class="carousel-item active">
                                 <img
-                                  src="./assets/img/tesst7.png"
+                                  src="./assets/img/test9.png"
                                   class="d-block w-100"
                                   alt="..."
                                 />
@@ -278,33 +278,29 @@
                                   <thead>
                                     <tr>
                                       <th style="width: 40%"></th>
-                                      <th style="width: 60%">Tủ điện</th>
+                                      <th style="width: 60%">TB đóng cắt</th>
                                     </tr>
                                   </thead>
                                   <tbody>
                                     <tr>
-                                      <td class="text-bold-500">Ptt</td>
-                                      <td>79kW</td>
+                                      <td class="text-bold-500">Loại</td>
+                                      <td>MCCB</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">Số lộ</td>
-                                      <td>11</td>
+                                      <td class="text-bold-500">Iđm</td>
+                                      <td>1200A</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">Tên tủ</td>
-                                      <td>MĐV.1</td>
+                                      <td class="text-bold-500">In</td>
+                                      <td>85kA</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">
-                                        Loại tải chính
-                                      </td>
-                                      <td>Điều hoà</td>
+                                      <td class="text-bold-500">Hãng</td>
+                                      <td>Huyndai</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">
-                                        Hệ số đồng thời
-                                      </td>
-                                      <td>0.6</td>
+                                      <td class="text-bold-500">Dạng</td>
+                                      <td>1600AF</td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -362,24 +358,12 @@
                                     </tr>
                                     <tr>
                                       <td style="font-weight: bold">T</td>
-                                      <td colspan="3">55&deg;C</td>
+                                      <td colspan="3">45*C</td>
                                     </tr>
                                     <tr>
-                                      <td style="font-weight: bold">H</td>
-                                      <td colspan="3">97%</td>
-                                    </tr>
-                                    <tr>
-                                      <td style="font-weight: bold">Pre</td>
-                                      <td colspan="3">50.1 Hz</td>
-                                    </tr>
-                                    <tr>
-                                      <td style="font-weight: bold">STATUS</td>
-                                      <td
-                                        colspan="3"
-                                        style="background-color: #209935"
-                                      >
-                                        OK
-                                      </td>
+                                      <td style="font-weight: bold">STT</td>
+                                      <td colspan="2">ON</td>
+                                      <td>OFF</td>
                                     </tr>
                                   </tbody>
                                 </table>
