--- a/management/5.html
+++ b/management/5.html
@@ -161,13 +161,11 @@
                           </div>
                         </div>
                         <div class="col-12">
-                          <div
-                            class="d-flex align-items-center justify-content-center"
-                            id="diaSpace"
-                            style="height: 70vh; margin-top: 2.5vh"
-                          >
-                            <div id="myholder"></div>
-                          </div>
+                          <img
+                            src="./assets/img/test5.png"
+                            class="d-block w-100"
+                            alt=""
+                          />
                         </div>
                       </div>
                     </div>
@@ -192,7 +190,7 @@
                             <div class="carousel-inner">
                               <div class="carousel-item active">
                                 <img
-                                  src="./assets/img/tesst7.png"
+                                  src="./assets/img/test4.png"
                                   class="d-block w-100"
                                   alt="..."
                                 />
@@ -277,34 +275,30 @@
                                 >
                                   <thead>
                                     <tr>
-                                      <th style="width: 40%"></th>
-                                      <th style="width: 60%">Tủ điện</th>
+                                      <th></th>
+                                      <th>Máy biến áp</th>
                                     </tr>
                                   </thead>
                                   <tbody>
                                     <tr>
-                                      <td class="text-bold-500">Ptt</td>
-                                      <td>79kW</td>
+                                      <td class="text-bold-500">Tỉ số</td>
+                                      <td>22kV/0.4kV</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">Số lộ</td>
-                                      <td>11</td>
+                                      <td class="text-bold-500">Công suất</td>
+                                      <td>200kVA</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">Tên tủ</td>
-                                      <td>MĐV.1</td>
+                                      <td class="text-bold-500">Un</td>
+                                      <td>27V</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">
-                                        Loại tải chính
-                                      </td>
-                                      <td>Điều hoà</td>
+                                      <td class="text-bold-500">Po</td>
+                                      <td>600W</td>
                                     </tr>
                                     <tr>
-                                      <td class="text-bold-500">
-                                        Hệ số đồng thời
-                                      </td>
-                                      <td>0.6</td>
+                                      <td class="text-bold-500">Pn</td>
+                                      <td>1200W</td>
                                     </tr>
                                   </tbody>
                                 </table>
