--- a/management/1.html
+++ b/management/1.html
@@ -182,7 +182,7 @@
                       <h4
                         id="heatmapname"
                         class="card-title"
-                        style="height: 2.5vh"
+                        style="height: 1rem"
                       >
                         Nhà Máy VLXD
                       </h4>
