--- a/management/5.html
+++ b/management/5.html
@@ -23,16 +23,16 @@
     <style>
       #myDiv.fullscreen {
         position: absolute;
-        top: 10px;
-        bottom: 10px;
-        left: 10px;
-        right: 10px;
+        top: 0.625rem;
+        bottom: 0.625rem;
+        left: 0.625rem;
+        right: 0.625rem;
         z-index: 1000;
       }
 
       #diaSpace.fullscreen {
-        height: 80vh !important;
-        margin-top: 5vh;
+        height: 10rem !important;
+        margin-top: 0.625rem;
       }
     </style>
   </head>
@@ -385,53 +385,68 @@
                               role="tabpanel"
                               aria-labelledby="v-pills-settings-tab"
                             >
-                              <div
-                                class="card-body d-flex flex-column col-lg-5"
+                              <div class="form-group has-icon-left">
+                                <label for="basicInput">Mật khẩu</label>
+                                <div class="input-group col-12">
+                                  <div class="position-relative">
+                                    <input
+                                      type="password"
+                                      class="form-control"
+                                      placeholder="Password"
+                                      id="password-horizontal-icon"
+                                    />
+                                    <div class="form-control-icon">
+                                      <i class="bi bi-lock"></i>
+                                    </div>
+                                  </div>
+                                  <button
+                                    class="btn btn-primary"
+                                    type="button"
+                                    id="button-addon2"
+                                  >
+                                    Xác minh
+                                  </button>
+                                </div>
+                              </div>
+                              <label for="basicInput" class="mb-2"
+                                >Điều khiển</label
                               >
-                                <div
-                                  class="btn-group mb-3"
-                                  role="group"
-                                  aria-label="Basic example"
-                                >
-                                  <button type="button" class="btn btn-success">
-                                    ON
-                                  </button>
-                                  <button
-                                    type="button"
-                                    class="btn btn-secondary"
+                              <div class="d-flex flex-row">
+                                <div class="d-flex flex-column col-lg-3 mr-6">
+                                  <div
+                                    class="btn-group mb-3"
+                                    role="group"
+                                    aria-label="Basic example"
                                   >
-                                    OFF
-                                  </button>
+                                    <button
+                                      type="button"
+                                      class="btn btn-primary"
+                                    >
+                                      ON
+                                    </button>
+                                    <button type="button" class="btn">
+                                      OFF
+                                    </button>
+                                  </div>
                                 </div>
-                                <div
-                                  class="btn-group mb-3"
-                                  role="group"
-                                  aria-label="Basic example"
-                                >
-                                  <button type="button" class="btn btn-success">
-                                    1 Pha
-                                  </button>
-                                  <button
-                                    type="button"
-                                    class="btn btn-secondary"
+                                <div class="d-flex flex-column col-lg-6">
+                                  <div
+                                    class="btn-group mb-3"
+                                    role="group"
+                                    aria-label="Basic example"
                                   >
-                                    3 Pha
-                                  </button>
-                                </div>
-                                <div
-                                  class="btn-group mb-3"
-                                  role="group"
-                                  aria-label="Basic example"
-                                >
-                                  <button type="button" class="btn btn-success">
-                                    Tự động
-                                  </button>
-                                  <button
-                                    type="button"
-                                    class="btn btn-secondary"
-                                  >
-                                    Thủ công
-                                  </button>
+                                    <button
+                                      type="button"
+                                      class="btn btn-primary"
+                                    >
+                                      Mode 1
+                                    </button>
+                                    <button type="button" class="btn">
+                                      Mode 2</button
+                                    ><button type="button" class="btn">
+                                      Mode 3
+                                    </button>
+                                  </div>
                                 </div>
                               </div>
                             </div>
