--- a/management/management copy.html
+++ b/management/management copy.html
@@ -23,16 +23,16 @@
     <style>
       #myDiv.fullscreen {
         position: absolute;
-        top: 10px;
-        bottom: 10px;
-        left: 10px;
-        right: 10px;
+        top: 0.625rem;
+        bottom: 0.625rem;
+        left: 0.625rem;
+        right: 0.625rem;
         z-index: 1000;
       }
 
       #diaSpace.fullscreen {
-        height: 80vh !important;
-        margin-top: 5vh;
+        height: 10rem !important;
+        margin-top: 0.625rem;
       }
     </style>
   </head>
@@ -154,7 +154,6 @@
                           <div
                             class="buttons d-flex justify-content-end"
                             onclick="toggleFullscreen()"
-                            style="height: 7.5vh"
                           >
                             <a href="#" class="btn icon icon-left">
                               <i class="bi bi-arrows-angle-expand"></i
@@ -165,7 +164,7 @@
                           <div
                             class="d-flex align-items-center justify-content-center"
                             id="diaSpace"
-                            style="height: 70vh; margin-top: 2.5vh"
+                            style="height: 32.5rem; margin-top: 1.5rem"
                           >
                             <div id="myholder"></div>
                           </div>
@@ -183,7 +182,7 @@
                       <h4
                         id="heatmapname"
                         class="card-title"
-                        style="height: 2.5vh"
+                        style="height: 1rem"
                       >
                         Nhà Máy VLXD
                       </h4>
@@ -193,22 +192,22 @@
                         <div class="col-12">
                           <div
                             id="heatmap-chart"
-                            style="height: 38vh; margin: -2.5vh 0 1vh"
+                            style="height: 17rem; margin: -1.5rem 0 0.625rem"
                           ></div>
                         </div>
                         <div class="col-4">
                           <h5 class="card-title">Load factor</h5>
-                          <div id="c1" style="height: 28vh"></div>
+                          <div id="c1" style="height: 13.5rem"></div>
                         </div>
                         <div class="col-4">
                           <h5 class="card-title">Current</h5>
 
-                          <div id="c2" style="height: 28vh"></div>
+                          <div id="c2" style="height: 13.5rem"></div>
                         </div>
                         <div class="col-4">
                           <h5 class="card-title">Power</h5>
 
-                          <div id="c3" style="height: 28vh"></div>
+                          <div id="c3" style="height: 13.5rem"></div>
                         </div>
                       </div>
                     </div>
