--- a/management/3.html
+++ b/management/3.html
@@ -177,7 +177,7 @@
                 <div class="card">
                   <div class="card-content">
                     <div class="card-body">
-                      <h4 id="heatmapname" class="card-title">Carousel</h4>
+                      <h4 id="heatmapname" class="card-title">Nhà máy VLXD</h4>
                     </div>
                     <div class="card-body">
                       <div class="row">
@@ -252,7 +252,7 @@
                               aria-controls="v-pills-settings"
                               aria-selected="false"
                               tabindex="-1"
-                              >Thiết lập</a
+                              >Thiết lập, điều khiển</a
                             >
                           </div>
                         </div>
@@ -416,7 +416,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="d-flex flex-column col-lg-6">
+                                <div class="d-flex flex-column col-lg-">
                                   <div
                                     class="btn-group mb-3"
                                     role="group"
