--- a/management/4.html
+++ b/management/4.html
@@ -179,7 +179,7 @@
                 <div class="card">
                   <div class="card-content">
                     <div class="card-body">
-                      <h4 id="heatmapname" class="card-title">Carousel</h4>
+                      <h4 id="heatmapname" class="card-title">Nhà máy VLXD</h4>
                     </div>
                     <div class="card-body">
                       <div class="row">
@@ -254,7 +254,7 @@
                               aria-controls="v-pills-settings"
                               aria-selected="false"
                               tabindex="-1"
-                              >Thiết lập</a
+                              >Thiết lập, điều khiển</a
                             >
                           </div>
                         </div>
