--- a/management/3.html
+++ b/management/3.html
@@ -193,6 +193,7 @@
                                   src="./assets/compiled/png/test8.png"
                                   class="d-block w-100"
                                   alt="..."
+                                  style="max-height: 30vh; object-fit: contain"
                                 />
                               </div>
                             </div>
@@ -266,12 +267,7 @@
                             >
                               <div class="table-responsive">
                                 <table
-                                  class="table mb-0"
-                                  style="
-                                    text-align: center;
-                                    width: 90%;
-                                    margin-left: 5%;
-                                  "
+                                  class="table table-hover mb-0 table-striped"
                                 >
                                   <thead>
                                     <tr>
@@ -310,10 +306,9 @@
                               role="tabpanel"
                               aria-labelledby="v-pills-profile-tab"
                             >
-                              <div class="table-responsive table-bot">
+                              <div class="table-responsive ">
                                 <table
-                                  class="table mb-0"
-                                  style="text-align: center"
+                                class="table table-hover mb-0 table-striped"
                                 >
                                   <thead>
                                     <tr>
