--- a/management/4.html
+++ b/management/4.html
@@ -175,7 +175,7 @@
                 </div>
               </div>
 
-              <div class="col-12 col-lg-6 p-1">
+              <div class="col-12 col-lg-6 p-1 ">
                 <div class="card">
                   <div class="card-content">
                     <div class="card-body">
@@ -195,6 +195,7 @@
                                   src="./assets/compiled/png/test9.png"
                                   class="d-block w-100"
                                   alt="..."
+                                  style="max-height: 30vh; object-fit: contain"
                                 />
                               </div>
                             </div>
@@ -268,12 +269,7 @@
                             >
                               <div class="table-responsive">
                                 <table
-                                  class="table mb-0"
-                                  style="
-                                    text-align: center;
-                                    width: 90%;
-                                    margin-left: 5%;
-                                  "
+                                  class="table table-hover mb-0 table-striped"
                                 >
                                   <thead>
                                     <tr>
@@ -312,10 +308,9 @@
                               role="tabpanel"
                               aria-labelledby="v-pills-profile-tab"
                             >
-                              <div class="table-responsive table-bot">
+                              <div class="table-responsive">
                                 <table
-                                  class="table mb-0"
-                                  style="text-align: center"
+                                class="table table-hover mb-0 table-striped"
                                 >
                                   <thead>
                                     <tr>
