--- a/management/1.html
+++ b/management/1.html
@@ -304,271 +304,105 @@
                   </div>
                 </div>
               </div>
-            </section>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- tủ điện -->
-    <div class="col-12 col-lg-6 p-1 d-sm-none" id="tudien">
-      <div class="card">
-        <div class="card-content">
-          <div class="card-body p-4">
-            <h4 id="heatmapname" class="card-title mb-1">Nhà máy VLXD</h4>
-          </div>
-          <div class="card-body p-3">
-            <div class="row">
-              <div class="col-5">
-                <div
-                  id="carouselExampleControls"
-                  class="carousel slide"
-                  data-ride="carousel"
-                >
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img
-                        src="./assets/compiled/png/tesst7.png"
-                        class="d-block w-100"
-                        alt="..."
-                        style="height: 35vh; object-fit: contain"
-                      />
+              <!-- tủ điện -->
+              <div class="col-12 col-lg-6 p-1 d-sm-none" id="tudien">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-body p-4">
+                      <h4 id="heatmapname" class="card-title mb-1">
+                        Nhà máy VLXD
+                      </h4>
                     </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-7">
-                <p class="card-text overflow-auto" style="height: 35vh">
-                  Welcome to our dynamic carousel, where innovation takes center
-                  stage. Take a captivating journey through our cutting-edge
-                  products, groundbreaking solutions, and the latest
-                  advancements in technology. Each slide invites you to discover
-                  something new and exciting, providing a glimpse into the
-                  future of innovation.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="card-body p-3">
-            <div class="row">
-              <div class="col-3">
-                <div
-                  class="nav flex-column nav-pills"
-                  id="v-pills-tab"
-                  role="tablist"
-                  aria-orientation="vertical"
-                >
-                  <a
-                    class="nav-link"
-                    id="v-pills-profile-tab"
-                    data-bs-toggle="pill"
-                    href="#v-pills-profile"
-                    role="tab"
-                    aria-controls="v-pills-profile"
-                    aria-selected="false"
-                    tabindex="-1"
-                    >Thông số hoạt động</a
-                  >
-
-                  <a
-                    class="nav-link"
-                    id="v-pills-settings-tab"
-                    data-bs-toggle="pill"
-                    href="#v-pills-settings"
-                    role="tab"
-                    aria-controls="v-pills-settings"
-                    aria-selected="false"
-                    tabindex="-1"
-                    >Thiết lập, điều khiển</a
-                  >
-                  <a
-                    class="nav-link active"
-                    id="v-pills-home-tab"
-                    data-bs-toggle="pill"
-                    href="#v-pills-home"
-                    role="tab"
-                    aria-controls="v-pills-home"
-                    aria-selected="false"
-                    tabindex="-1"
-                    >Thông số thiết kế</a
-                  >
-                </div>
-              </div>
-              <div class="col-9">
-                <div
-                  class="tab-content overflow-auto"
-                  style="height: 35vh"
-                  id="v-pills-tabContent"
-                >
-                  <div
-                    class="tab-pane fade"
-                    id="v-pills-profile"
-                    role="tabpanel"
-                    aria-labelledby="v-pills-profile-tab"
-                  >
-                    <div class="table-responsive table-bot">
-                      <table class="table table-hover mb-0 table-striped">
-                        <thead>
-                          <tr>
-                            <th></th>
-                            <th>Pha A</th>
-                            <th>Pha B</th>
-                            <th>Pha C</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td style="font-weight: bold">U</td>
-                            <td>220.3</td>
-                            <td>220.3</td>
-                            <td>220.3</td>
-                          </tr>
-                          <tr>
-                            <td style="font-weight: bold">I</td>
-                            <td>845</td>
-                            <td>896</td>
-                            <td>856</td>
-                          </tr>
-                          <tr>
-                            <td style="font-weight: bold">P</td>
-                            <td>230</td>
-                            <td>245</td>
-                            <td>289</td>
-                          </tr>
-                          <tr>
-                            <td style="font-weight: bold">Pf</td>
-                            <td>0.96</td>
-                            <td>0.93</td>
-                            <td>0.95</td>
-                          </tr>
-                          <tr>
-                            <td style="font-weight: bold">Q</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                          </tr>
-                          <tr>
-                            <td style="font-weight: bold">T</td>
-                            <td colspan="3">55&deg;C</td>
-                          </tr>
-                          <tr>
-                            <td style="font-weight: bold">H</td>
-                            <td colspan="3">97%</td>
-                          </tr>
-                          <tr>
-                            <td style="font-weight: bold">Pre</td>
-                            <td colspan="3">50.1 Hz</td>
-                          </tr>
-                          <tr>
-                            <td style="font-weight: bold">STATUS</td>
-                            <td
-                              colspan="3"
-                              style="
-                                background-color: #209935;
-                                text-align: center;
-                              "
-                            >
-                              OK
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                  <div
-                    class="tab-pane fade"
-                    id="v-pills-settings"
-                    role="tabpanel"
-                    aria-labelledby="v-pills-settings-tab"
-                  >
-                    <div class="form-group has-icon-left">
-                      <label for="password-id-icon">Mật khẩu</label>
-                      <div class="position-relative">
-                        <div class="input-group mb-3">
-                          <input
-                            type="password"
-                            class="form-control"
-                            placeholder="Password"
-                            id="password-id-icon"
-                          />
-                          <div class="form-control-icon">
-                            <i class="bi bi-lock"></i>
-                          </div>
-                          <button
-                            class="btn btn-primary"
-                            type="button"
-                            id="button-addon1"
+                    <div class="card-body p-3">
+                      <div class="row">
+                        <div class="col-5">
+                          <div
+                            id="carouselExampleControls"
+                            class="carousel slide"
+                            data-ride="carousel"
                           >
-                            Xác minh
-                          </button>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img
+                                  src="./assets/compiled/png/tesst7.png"
+                                  class="d-block w-100"
+                                  alt="..."
+                                  style="height: 35vh; object-fit: contain"
+                                />
+                              </div>
+                            </div>
+                          </div>
                         </div>
-                        <p class="text-muted">Điều khiển</p>
-                        <div
-                          class="btn-group btn-group-lg"
-                          role="group"
-                          aria-label="Basic example"
-                        >
-                          <button type="button" class="btn">ON</button>
-                          <button type="button" class="btn btn-primary">
-                            OFF
-                          </button>
-                        </div>
-                        <div
-                          class="btn-group btn-group-lg"
-                          role="group"
-                          aria-label="Basic example"
-                        >
-                          <button type="button" class="btn">Mode 1</button>
-                          <button type="button" class="btn btn-primary">
-                            Mode 2
-                          </button>
-                          <button type="button" class="btn">Mode 3</button>
+                        <div class="col-7">
+                          <p
+                            class="card-text overflow-auto"
+                            style="height: 35vh"
+                          >
+                            Welcome to our dynamic carousel, where innovation
+                            takes center stage. Take a captivating journey
+                            through our cutting-edge products, groundbreaking
+                            solutions, and the latest advancements in
+                            technology. Each slide invites you to discover
+                            something new and exciting, providing a glimpse into
+                            the future of innovation.
+                          </p>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div
-                    class="tab-pane fade active show"
-                    id="v-pills-home"
-                    role="tabpanel"
-                    aria-labelledby="v-pills-home-tab"
-                  >
-                    <div class="table-responsive">
-                      <table class="table table-hover mb-0 table-striped">
-                        <thead>
-                          <tr>
-                            <th style="width: 40%"></th>
-                            <th style="width: 60%">Tủ điện</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td class="text-bold-500">Ptt</td>
-                            <td>79kW</td>
-                          </tr>
-                          <tr>
-                            <td class="text-bold-500">Số lộ</td>
-                            <td>11</td>
-                          </tr>
-                          <tr>
-                            <td class="text-bold-500">Tên tủ</td>
-                            <td>MĐV.1</td>
-                          </tr>
-                          <tr>
-                            <td class="text-bold-500">Loại tải chính</td>
-                            <td>Điều hoà</td>
-                          </tr>
-                          <tr>
-                            <td class="text-bold-500">Hệ số đồng thời</td>
-                            <td>0.6</td>
-                          </tr>
-                        </tbody>
-                      </table>
+                </div>
+              </div>
+
+              <!-- đóng cắt -->
+              <div class="col-12 col-lg-6 p-1 d-sm-none" id="dongcat">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="card-body p-4">
+                      <h4 id="heatmapname" class="card-title mb-1">
+                        Nhà máy VLXD
+                      </h4>
+                    </div>
+                    <div class="card-body p-3">
+                      <div class="row">
+                        <div class="col-5">
+                          <div
+                            id="carouselExampleControls"
+                            class="carousel slide"
+                            data-ride="carousel"
+                          >
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img
+                                  src="./assets/compiled/png/test9.png"
+                                  class="d-block w-100"
+                                  alt="..."
+                                  style="height: 35vh; object-fit: contain"
+                                />
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-7">
+                          <p
+                            class="card-text overflow-auto"
+                            style="height: 35vh"
+                          >
+                            Welcome to our dynamic carousel, where innovation
+                            takes center stage. Take a captivating journey
+                            through our cutting-edge products, groundbreaking
+                            solutions, and the latest advancements in
+                            technology. Each slide invites you to discover
+                            something new and exciting, providing a glimpse into
+                            the future of innovation.
+                          </p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
+            </section>
           </div>
         </div>
       </div>
@@ -726,6 +560,7 @@
 
     <script src="./assets/compiled/js/app.js"></script>
     <script src="./assets/compiled/js/element.js"></script>
+    <script src="./assets/compiled/js/control.js"></script>
     <script src="./assets/compiled/js/management.js"></script>
     <script src="./assets/compiled/js/chart.js"></script>
     <script src="./assets/compiled/js/api.js"></script>
